--- a/app/src/main/res/layout/activity_old_notes.xml
+++ b/app/src/main/res/layout/activity_old_notes.xml
@@ -85,25 +85,37 @@
         android:id="@+id/oldThingDateOne"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="139dp"
+        android:layout_marginEnd="36dp"
         android:text="10/8"
-        tools:layout_editor_absoluteX="328dp"
-        tools:layout_editor_absoluteY="139dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/oldThingOne"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/oldThingDateTwo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="67dp"
+        android:layout_marginEnd="34dp"
         android:text="10/8"
-        tools:layout_editor_absoluteX="330dp"
-        tools:layout_editor_absoluteY="225dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/oldThingTwo"
+        app:layout_constraintTop_toBottomOf="@+id/oldThingDateOne" />
 
     <TextView
         android:id="@+id/oldThingDateThree"
         android:layout_width="wrap_content"
         android:layout_height="22dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="55dp"
+        android:layout_marginEnd="34dp"
         android:text="10/8"
-        tools:layout_editor_absoluteX="330dp"
-        tools:layout_editor_absoluteY="299dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/oldThingThree"
+        app:layout_constraintTop_toBottomOf="@+id/oldThingDateTwo" />
 
     <TextView
         android:id="@+id/oldThingDateFour"
@@ -116,5 +128,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/oldThingFour"
         app:layout_constraintTop_toBottomOf="@+id/oldThingThree" />
+
+    <ScrollView
+        android:id="@+id/oldThingsScrollBar"
+        android:layout_width="70dp"
+        android:layout_height="431dp"
+        android:layout_marginStart="6dp"
+        android:scrollbarStyle="insideOverlay"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sortButton">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
