Added editTexts and saveButton to 3 good things

--- a/app/src/main/res/layout/activity_three_good_things.xml
+++ b/app/src/main/res/layout/activity_three_good_things.xml
@@ -16,7 +16,6 @@
         android:ems="10"
         android:hint="Good thing #1"
         android:inputType="textPersonName"
-        android:text="Good thing #1"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,8 +29,8 @@
         android:layout_marginTop="65dp"
         android:layout_marginEnd="86dp"
         android:ems="10"
+        android:hint="Good thing #2"
         android:inputType="textPersonName"
-        android:text="Good thing #2"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,8 +44,8 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="87dp"
         android:ems="10"
+        android:hint="Good thing #3"
         android:inputType="textPersonName"
-        android:text="Good thing #3"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
