--- a/app/src/main/res/layout/activity_three_good_things.xml
+++ b/app/src/main/res/layout/activity_three_good_things.xml
@@ -8,8 +8,8 @@
 
     <EditText
         android:id="@+id/thingOne"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="329dp"
+        android:layout_height="45dp"
         android:layout_marginStart="84dp"
         android:layout_marginTop="121dp"
         android:layout_marginEnd="85dp"
@@ -23,23 +23,24 @@
 
     <EditText
         android:id="@+id/thingTwo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="343dp"
+        android:layout_height="45dp"
         android:layout_marginStart="83dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="86dp"
         android:ems="10"
         android:hint="Good thing #2"
         android:inputType="textPersonName"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/thingOne" />
 
     <EditText
         android:id="@+id/thingThree"
-        android:layout_width="wrap_content"
-        android:layout_height="41dp"
+        android:layout_width="357dp"
+        android:layout_height="40dp"
         android:layout_marginStart="82dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="87dp"
@@ -48,7 +49,7 @@
         android:inputType="textPersonName"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.478"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/thingTwo" />
 
