working on recycler view for old notes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:ems="10"
         android:hint="enter email here"
         android:inputType="textEmailAddress"
+        android:text="test@test.com"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/passwordText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,6 +30,7 @@
         android:ems="10"
         android:hint="enter password here"
         android:inputType="textPassword"
+        android:text="testword"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
