--- a/app/src/main/res/layout/activity_three_good_things.xml
+++ b/app/src/main/res/layout/activity_three_good_things.xml
@@ -101,4 +101,15 @@
         app:layout_constraintStart_toEndOf="@+id/guidedMeditationButton"
         app:layout_constraintTop_toBottomOf="@+id/save_Button" />
 
+    <TextView
+        android:id="@+id/messageTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginEnd="163dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/thingThree" />
+
 </android.support.constraint.ConstraintLayout>
