--- a/app/src/main/res/layout/activity_old_notes.xml
+++ b/app/src/main/res/layout/activity_old_notes.xml
@@ -10,4 +10,33 @@
         android:id="@+id/oldThingsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="400dp" />
+
+    <Button
+        android:id="@+id/sortButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="17dp"
+        android:layout_marginBottom="38dp"
+        android:text="Sort" />
+
+    <Button
+        android:id="@+id/toHomeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/sortButton"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="-2dp"
+        android:layout_marginEnd="13dp"
+        android:text="Home Page" />
+
+    <Button
+        android:id="@+id/notificationsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/toHomeButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="0dp"
+        android:text="notifications" />
 </RelativeLayout>
