Sorting is now connected to the sort button, things are shown randomly by default

--- a/app/src/main/res/layout/activity_old_notes.xml
+++ b/app/src/main/res/layout/activity_old_notes.xml
@@ -18,8 +18,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="17dp"
-        android:layout_marginBottom="38dp"
-        android:text="Sort" />
+        android:layout_marginBottom="61dp"
+        android:text="Sort: Date" />
 
     <Button
         android:id="@+id/toHomeButton"
@@ -39,4 +39,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="0dp"
         android:text="notifications" />
+
 </RelativeLayout>
