--- a/app/src/main/res/layout/activity_guided_meditation.xml
+++ b/app/src/main/res/layout/activity_guided_meditation.xml
@@ -12,9 +12,13 @@
         android:layout_height="54dp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="40dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="83dp"
         android:text="Guided Meditation"
         android:textAlignment="center"
         android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/timerTextView"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,6 +47,7 @@
         android:layout_marginEnd="54dp"
         android:text="10"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/fifteenMinuteButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,28 +65,33 @@
         app:layout_constraintBottom_toTopOf="@+id/startButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tenMinuteButton" />
 
     <Button
         android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="161dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="135dp"
         android:layout_marginBottom="17dp"
         android:text="Start"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fifteenMinuteButton" />
 
     <TextView
         android:id="@+id/timerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="163dp"
-        android:layout_marginTop="83dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="163dp"
+        android:layout_marginBottom="10dp"
         android:text="00:00"
+        app:layout_constraintBottom_toTopOf="@+id/fiveMinuteButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guidedMeditationText" />
