--- a/app/src/main/res/layout/activity_guided_meditation.xml
+++ b/app/src/main/res/layout/activity_guided_meditation.xml
@@ -93,7 +93,7 @@
     <Button
         android:id="@+id/customButton"
         android:layout_width="248dp"
-        android:layout_height="49db"
+        android:layout_height="wrap_content"
         android:layout_marginStart="82dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="54dp"
