--- a/app/src/main/res/layout/activity_old_notes.xml
+++ b/app/src/main/res/layout/activity_old_notes.xml
@@ -9,7 +9,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/oldThingsRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="400dp" />
+        android:layout_height="500dp" />
 
     <Button
         android:id="@+id/sortButton"
@@ -17,9 +17,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginBottom="61dp"
-        android:text="Sort: Date" />
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="56dp"
+        android:text="Sort by Date" />
 
     <Button
         android:id="@+id/toHomeButton"
@@ -27,8 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/sortButton"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="-2dp"
-        android:layout_marginEnd="13dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="6dp"
         android:text="Home Page" />
 
     <Button
@@ -38,6 +38,6 @@
         android:layout_alignBottom="@+id/toHomeButton"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="0dp"
-        android:text="notifications" />
+        android:text="notify me!" />
 
 </RelativeLayout>
