Final final push (fingers crossed)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:ems="10"
         android:hint="enter email here"
         android:inputType="textEmailAddress"
-        android:text="test@test.com"
+        android:text="demo@TO426.com"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -29,7 +29,7 @@
         android:ems="10"
         android:hint="enter email here"
         android:inputType="textEmailAddress"
-        android:text="testUser"
+        android:text="demoUser"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
